--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+# spring.datasource.url=jdbc:mysql://localhost:3306/movie-theatre-system
+spring.datasource.username=root
+spring.datasource.password=398292002
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+server.error.include-message=always
