--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-# spring.datasource.url=jdbc:mysql://localhost:3306/movie_theatre_system
+spring.datasource.url=jdbc:mysql://localhost:3306/movie_theatre_system
 spring.datasource.username=root
-spring.datasource.password=398292002
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
