--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ server.error.include-message=always
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.sql.init.platform=mysql
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=noreply.ticketkings@gmail.com
+spring.mail.password=tjfhtlryqholnckr
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
