--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/movie_theatre_system?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Nh1995#17
+spring.datasource.password=398292002
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
